# zipper

./: .bazelrc  .concourse.yaml  .concouse.yaml  .gitignore  .goreleaser.yaml  .goreleaser.yml  BAZEL.md  BUILD  BUILD.bazel  Dockerfile  README.md  TODO.md  WORKSPACE  deps.bzl  docker-bake.hcl  go.mod  go.sum  main.go  main_test.go  mkdocs.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yaml  goreleaser.yml  gosec.yaml  instl-test.yaml  links.yaml  lint.yaml  release.yml  test.yaml
cmd/resizer/: BUILD.bazel  main.go  main_test.go
cmd/zipper/: BUILD.bazel  main.go  main_test.go
docs/: index.md
internal/zipper/: BUILD.bazel  zip.go  zip_test.go
pkg/: BUILD.bazel  helper.go  helper_test.go
