load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "resizer_lib",
    srcs = ["main.go"],
    importpath = "github.com/pratikbalar/zipper/cmd/resizer",
    visibility = ["//visibility:private"],
    deps = ["@com_github_disintegration_imaging//:go_default_library"],
)

go_binary(
    name = "resizer",
    embed = [":resizer_lib"],
    visibility = ["//visibility:public"],
)
