load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zipper_lib",
    srcs = ["main.go"],
    importpath = "github.com/pratikbalar/zipper/cmd/zipper",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/zipper",
        "@com_github_pkg_profile//:profile",
    ],
)

go_binary(
    name = "zipper",
    embed = [":zipper_lib"],
    visibility = ["//visibility:public"],
)
